# apjson

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml  queson.pyi
.github/workflows/: CI.yml
benchmarks/: benchtemplate.py  runtest_orjson.py
benchmarks/testfiles/: oops-all-strings.json
src/: de.rs  lib.rs  pymem.rs  ser.rs
tests/: test_apjson.py  test_queson.py
